syntax = "proto3";
option java_package = "cat.durban.sergio.flutter_meta_appads_sdk.proto";

enum FBUserDataType {
  Email = 0;
  FirstName = 1;
  LastName = 2;
  Phone = 3;
  DateOfBirth = 4;
  Gender = 5;
  City = 6;
  State = 7;
  Zip = 8;
  Country = 9;
  ExternalId = 10;
}

message FBSetUserDataRequest {
  optional FBUserDataType type = 1;
  string value = 2;
}